--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="mx.com.liverpool.shopapp.ProductsFragment"
+        android:name="mx.com.liverpool.shopapp.products.presentation.view.ProductsFragment"
         android:label="@string/products_fragment_label"
         tools:layout="@layout/fragment_products"/>
 </navigation>
