Populate the recyclerview with the response from web service

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -56,4 +56,9 @@
 
     <include layout="@layout/content_main" />
 
+    <include
+        android:id="@+id/loading_view"
+        layout="@layout/loading_view" />
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
