--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary_color">#FB3DB4</color>
+    <color name="red_price_color">#C5312D</color>
+    <color name="white_transparency">#80FFFFFF</color>
 </resources>
