--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,11 @@
 <resources>
     <dimen name="size_title">24sp</dimen>
-    <dimen name="size_toolbar_button">14sp</dimen>
+    <dimen name="size_20dp">20dp</dimen>
     <dimen name="size_16dp">16dp</dimen>
     <dimen name="size_8dp">8dp</dimen>
+    <dimen name="size_4dp">4dp</dimen>
+
+    <!-- Fonts -->
+    <dimen name="size_product_name">20sp</dimen>
+    <dimen name="size_toolbar_button">14sp</dimen>
 </resources>
