--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -29,10 +29,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_16dp"
             android:layout_marginTop="@dimen/size_16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/size_16dp"
             android:ellipsize="end"
             android:lines="3"
-            android:text="Labial brillante Dior Addict Lip Maximizer"
             android:textColor="@color/black"
             android:textSize="@dimen/size_product_name"
             android:textStyle="bold"
@@ -46,7 +45,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_16dp"
             android:layout_marginTop="@dimen/size_8dp"
-            android:text="$ 100.00"
             app:layout_constraintStart_toEndOf="@+id/imageview_product"
             app:layout_constraintTop_toBottomOf="@+id/textview_product_name" />
 
@@ -54,11 +52,11 @@
             android:id="@+id/textview_price_promo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/size_16dp"
             android:layout_marginTop="28dp"
-            android:layout_marginBottom="16dp"
-            android:text="$ 90.00"
+            android:layout_marginBottom="@dimen/size_16dp"
             android:textColor="@color/red_price_color"
+            android:textStyle="bold"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintStart_toEndOf="@+id/imageview_product"
@@ -67,37 +65,20 @@
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="@dimen/size_16dp"
+            android:layout_marginEnd="@dimen/size_16dp"
             android:layout_marginBottom="8dp"
             android:orientation="horizontal"
-            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageview_product">
 
-            <ImageView
-                android:id="@+id/imageview_circle_1"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/circle_color" />
-
-            <ImageView
-                android:id="@+id/imageview_circle_2"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginStart="@dimen/size_4dp"
-                android:layout_marginEnd="@dimen/size_4dp"
-                android:src="@drawable/circle_color" />
-
-            <ImageView
-                android:id="@+id/imageview_circle_3"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginStart="@dimen/size_4dp"
-                android:layout_marginEnd="@dimen/size_4dp"
-                android:src="@drawable/circle_color" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview_colors"
+                android:layout_width="match_parent"
+                android:nestedScrollingEnabled="false"
+                android:layout_height="20dp"/>
 
         </LinearLayout>
 
