Add spinner to allowing sort products by price getting a new list from web service

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
+    <dimen name="size_searchview">280dp</dimen>
     <dimen name="size_title">24sp</dimen>
     <dimen name="size_20dp">20dp</dimen>
     <dimen name="size_16dp">16dp</dimen>
